# custom_pallet-with-latest-Node

./: Cargo.toml  README.md
pallets/crud/: Cargo.toml
pallets/custom-pallet-crud/: Cargo.toml
pallets/custom-pallet-crud/src/: lib.rs
pallets/flipper/: Cargo.toml
pallets/flipper/src/: lib.rs
pallets/profile/: Cargo.toml
pallets/profile/src/: lib.rs
pallets/template/src/: benchmarking.rs  mock.rs  tests.rs
pallets/user/: Cargo.toml
pallets/user/src/: benchmarking.rs  lib.rs  mock.rs  weights.rs
runtime/: Cargo.toml  rustc-ice-2025-06-19T03_17_27-31340.txt  rustc-ice-2025-06-19T03_17_42-31869.txt
runtime/src/: apis.rs  benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
