[package]
name = "crud"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
frame-support.workspace = true
frame-system.workspace = true
scale-info = { features = ["derive"], workspace = true }

[dev-dependencies]
sp-core = { default-features = true, workspace = true }
sp-io = { default-features = true, workspace = true }
sp-runtime = { default-features = true, workspace = true }

[features]
default = ["std"]
std     = [
    "codec/std", 
    "scale-info/std", 
    "frame-support/std", 
    "frame-system/std"
]
runtime-benchmarks = [
	# "frame-support/runtime-benchmarks",
	# "frame-system/runtime-benchmarks",
	# "sp-runtime/runtime-benchmarks",
]
try-runtime = [
	# "frame-support/try-runtime",
	# "frame-system/try-runtime",
	# "sp-runtime/try-runtime",
]
